<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath/>
	</parent>
	<groupId>lule</groupId>
	<artifactId>dn</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>dn</name>
	<description>lule applikazion</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>gg.jte</groupId>
			<artifactId>jte-spring-boot-starter-3</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>gg.jte</groupId>
			<artifactId>jte</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.17.2</version>
		</dependency>
		<dependency>
			<groupId>org.webjars.npm</groupId>
			<artifactId>htmx.org</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-docker-compose</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>gg.jte</groupId>
			<artifactId>jte-watcher</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
<!--			<plugin>-->
<!--				<groupId>gg.jte</groupId>-->
<!--				<artifactId>jte-maven-plugin</artifactId>-->
<!--				<version>3.2.1</version>-->
<!--				<configuration>-->
<!--					<sourceDirectory>${project.basedir}/src/main/jte</sourceDirectory>-->
<!--					<targetDirectory>${project.build.outputDirectory}</targetDirectory>-->
<!--					<contentType>Html</contentType>-->
<!--				</configuration>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<phase>process-classes</phase>-->
<!--						<goals>-->
<!--							<goal>precompile</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
<!--			<plugin>-->
<!--				<groupId>gg.jte</groupId>-->
<!--				<artifactId>jte-maven-plugin</artifactId>-->
<!--				<version>3.2.1</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>jte-generate</id>-->
<!--						<phase>generate-sources</phase>-->
<!--						<goals>-->
<!--							<goal>generate</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<sourceDirectory>${project.basedir}/src/main/jte</sourceDirectory>-->
<!--							<contentType>Html</contentType>-->
<!--							<binaryStaticContent>true</binaryStaticContent>-->
<!--							<targetResourceDirectory>${project.build.outputDirectory}</targetResourceDirectory>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>resources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
                    <source>21</source>
                    <target>21</target>
                </configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.maciejwalkowiak.paseq</groupId>
				<artifactId>paseq-maven-plugin</artifactId>
				<version>0.1.1</version>
				<configuration>
					<tasks>
						<task>
							<exec>
								<command>docker compose up -d --wait</command>
							</exec>
						</task>
						<task>
							<exec>
								<directory>src/main/frontend</directory>
								<command>npm install</command>
							</exec>
						</task>
						<task>
							<exec>
								<directory>src/main/frontend</directory>
								<command>npm run build</command>
							</exec>
						</task>
						<task>
							<async>true</async>
							<exec>
								<directory>src/main/frontend</directory>
								<command>npm run watch</command>
							</exec>
						</task>
						<task>
							<goals>spring-boot:run</goals>
						</task>
					</tasks>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
